# XML2HTML-Converter-for-University-Systems

./: .deepsource.toml  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  MakeFile  README.md  TODO.md  creathtml.py  main.py  makefile  pyproject.toml  requirements.txt  spisokpriority.py
.github/: release-drafter.yml
.github/workflows/: build.yml
src/: initializing_creation.py  list_priority.py  main.py  utils.py
src/core/: config.py
src/template/: create_html.py  crete_html.py  template.html
src/templates/: createhtml.py
