[tool.poetry]
name = "parse-xml-file-volgau"
version = "0.1.0"
description = ""
authors = ["Fgeeha <33605615+Fgeeha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyinstaller = "^6.8.0"
pydantic-settings = "^2.4.0"
pydantic = "^2.8.2"
logging = "^0.4.9.6"
jinja2 = "^3.1.4"
defusedxml = "^0.7.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^3.8.0"
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2
src_paths = ["src",]
skip_glob = [
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    ".env.template",
    ".env",
]

