[tool.poetry]
name = "parse-xml-file-volgau"
version = "0.2.0"
description = "XML to HTML converter for university enrollment systems"
authors = ["Fgeeha <33605615+Fgeeha@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic-settings = "^2.12.0"
pydantic = "^2.12.5"
jinja2 = "^3.1.6"
defusedxml = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.18.0"
isort = "^7.0.0"
pre-commit = "^4.2.0"
black = "^26.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2
src_paths = ["src"]
skip_glob = [
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    ".env.template",
    ".env",
]

[tool.black]
line-length = 120
target-version = ["py311"]
